Correct typo in description

--- a/TimeZoneDisplay/strings/TimeZoneDisplay.1033.resx
+++ b/TimeZoneDisplay/strings/TimeZoneDisplay.1033.resx
@@ -130,7 +130,7 @@
     <value>Default Time Zone</value>
   </data>
   <data name="ControlDescription" xml:space="preserve">
-    <value>This contorl allows a date or date and time field to be displayed in a different timezone.</value>
+    <value>This control allows a date or date and time field to be displayed in a different timezone.</value>
   </data>
   <data name="ControlDisplayName" xml:space="preserve">
     <value>Time Zone Display</value>
